fix : organized alignment of stack card

--- a/src/Days/Day-3/components/card/card/Card.module.css
+++ b/src/Days/Day-3/components/card/card/Card.module.css
@@ -1,9 +1,13 @@
 .cardContainer {
-  height: 300px;
-  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 700px;
   position: sticky;
   top: 0;
   margin: 0 auto;
+  
 
   .card {
     display: flex;
